[package]
name = "samson"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
